<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DII_Name"
            android:textColor="@color/darkColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/defaultGrey"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutA1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/II_A1"
            android:textColor="@color/darkColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewA1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/defaultGrey"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutA2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/II_A2"
            android:textColor="@color/darkColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewA2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/defaultGrey"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDecayConst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DII_DecayConst"
            android:textColor="@color/darkColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewDecayConst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/defaultGrey"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutExemptCon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/II_ExemptCon"
            android:textColor="@color/darkColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewExemptCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/defaultGrey"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutExemptLim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/II_ExemptLim"
            android:textColor="@color/darkColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewExemptLim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/defaultGrey"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHalfLifeShort"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DII_Halflife"
            android:textColor="@color/darkColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewHalfLifeShort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/defaultGrey"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHalfLifeLong"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DII_Halflife"
            android:textColor="@color/darkColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewHalfLifeLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/defaultGrey"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLicLim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/II_LicLim"
            android:textColor="@color/darkColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewLicLim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/defaultGrey"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRQ"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/II_RQ"
            android:textColor="@color/darkColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewRQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/defaultGrey"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>