<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="start"
        android:background="@color/defaultBlack"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgViewMenuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/menuImg_normal_edge_margin"
            android:layout_marginLeft="@dimen/menuImg_normal_edge_margin"
            android:layout_marginTop="@dimen/menuImg_normal_edge_margin"
            android:layout_marginBottom="@dimen/menuImg_normal_edge_margin"
            android:clickable="true"
            android:contentDescription="@string/menuLines_ContentDescript"
            android:focusable="true"
            app:srcCompat="@drawable/ic_grey_menu_lines" />

        <View
            android:id="@+id/divider"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/searchBar_edge_margin"
            android:layout_marginLeft="@dimen/searchBar_edge_margin"
            android:layout_marginTop="@dimen/vertical_divider_spacing"
            android:layout_marginBottom="@dimen/vertical_divider_spacing"
            android:background="@color/defaultGrey" />

        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0000"
            android:text="@string/shipmentBtnText"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/umlBlue"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imgViewAddBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/menuImg_normal_edge_margin"
            android:layout_marginLeft="@dimen/menuImg_normal_edge_margin"
            android:layout_marginEnd="@dimen/menuImg_normal_edge_margin"
            android:layout_marginRight="@dimen/menuImg_normal_edge_margin"
            android:layout_marginTop="@dimen/menuImg_normal_edge_margin"
            android:layout_marginBottom="@dimen/menuImg_normal_edge_margin"
            android:clickable="true"
            android:contentDescription="@string/add_ContentDescript"
            android:focusable="true"
            app:srcCompat="@drawable/ic_grey_plus" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

</LinearLayout>