<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:background="@color/darkColor"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgViewMenuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="@dimen/menuImg_normal_edge_margin"
                android:paddingEnd="@dimen/menuImg_normal_edge_margin"
                android:paddingTop="@dimen/menuImg_normal_edge_margin"
                android:paddingBottom="@dimen/menuImg_normal_edge_margin"
                android:clickable="true"
                android:contentDescription="@string/menuLines_ContentDescript"
                android:focusable="true"
                app:srcCompat="@drawable/ic_grey_menu_lines" />

            <View
                android:id="@+id/divider"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/vertical_divider_spacing"
                android:layout_marginBottom="@dimen/vertical_divider_spacing"
                android:background="@color/defaultGrey" />

            <TextView
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0000"
                android:text="@string/referenceBtnText"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/umlBlue"
                android:textSize="25sp" />
        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="@dimen/searchBar_edge_margin"
            android:layout_marginRight="@dimen/searchBar_edge_margin"
            android:layout_marginBottom="@dimen/searchBar_edge_margin"
            android:background="@color/trueWhite"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/txtViewNoResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/noResults" />

    </RelativeLayout>

</LinearLayout>